# MetadataEditor

./: .gitignore  MetUR.py  Pipfile  README.md  cascadePopUp.py  editorBox.py  ejemplo multithread.py  fillFieldsPopup.py  logger multithread.py  main.py  media.py  mediaControls.py  metadataEditor.py  metadataEditorPop.py  musicPlayer.py  pipe youtubedl output.py  popupMenu.py  pyproject.toml  spotifyInfo.py  tagModifier.py  tempCodeRunnerFile.py  viewInfo.py  youtube.py
src/: Untitled-1.py  albumArtCache.py  ansiParser.py  default_keybinds.toml  keybindsConfig.py  logging_config.py  main.py  media.py  newkeyhandler.py  spotifyInfo.py  tagModifier.py  trackInfo.py  viewInfo.py  youtube.py
src/urwid_components/: ansiHelper.py  ansiText.py  ansiWidget.py  display.py  editorBox.py  editorView.py  footer.py  header.py  help.py  keyHandler.py  list.py  mainLoop.py  mediaControls.py  metadataEditor.py  metadataEditorPop.py  musicPlayerView.py  popupMenu.py  simpleTrackInfo.py  view.py  viewManager.py  youtubeEdit.py
tests/: test_album_art_cache.py  test_ansi_parser.py  test_help.py  test_keybinds_config.py  test_logging_config.py  test_media.py  test_newkeyhandler.py  test_tag_modifier.py  test_track_info.py  test_view_info.py  test_youtube.py
