[tool.poetry]
name = "metadataeditor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
eyed3 = "*"
urwid = "*"
requests = "*"
pillow = "*"
spotipy = "*"
pygame = "^2.6.1"
yt-dlp = "^2024.12.23"



[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "Your Name", email = "you@example.com"},
]
requires-python = ">=3.13"
dependencies = [
    "urwid",
    "requests",
    "pillow",
    "spotipy",
    "miniaudio>=1.61",
    "yt-dlp<2025.0.0,>=2024.12.23",
    "python-dotenv>=1.0.1",
    "mutagen>=1.47.0",
    "climage>=0.2.2",
    "musicbrainzngs>=0.7.1",
]
name = "metadataeditor"
version = "0.1.0"
description = ""
readme = "README.md"

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "N",  # PEP 8 Naming Conventions (enforces snake_case for functions/variables/methods, PascalCase for classes, UPPER_SNAKE_CASE for constants)
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
