[tool.poetry]
name = "metadataeditor"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.13"
eyed3 = "*"
urwid = "*"
requests = "*"
pillow = "*"
spotipy = "*"
pygame = "*"
yt-dlp = "*"



[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "Your Name", email = "you@example.com"},
]
requires-python = ">=3.13"
dependencies = [
    "urwid",
    "requests",
    "pillow",
    "spotipy",
    "miniaudio",
    "yt-dlp",
    "python-dotenv",
    "mutagen",
    "climage",
    "musicbrainzngs",
]
name = "metadataeditor"
version = "0.1.0"
description = ""
readme = "README.md"

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "N",  # PEP 8 Naming Conventions (enforces snake_case for functions/variables/methods, PascalCase for classes, UPPER_SNAKE_CASE for constants)
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
